# merlion-infer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  limine.conf  linker.ld  test-model.gguf
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: test-machine-setup.md
src/: config.rs  lib.rs  log.rs  main.rs  watchdog.rs
src/arch/x86_64/: acpi.rs  acpi_tables.rs  font.rs  framebuffer.rs  gdt.rs  idt.rs  keyboard.rs  mod.rs  serial.rs  simd.rs  smp.rs  smp_boot.rs  timer.rs
src/boot/: limine.rs
src/drivers/: apple_nvme.rs  mod.rs  nvme.rs  pci.rs  usb_ethernet.rs  virtio.rs  virtio_blk.rs  virtio_net.rs  xhci.rs  xhci_transfer.rs
src/drivers/gpu/: compute.rs  discovery.rs  firmware.rs  info.rs  mmio.rs  mod.rs  regs.rs  shader.rs  vram.rs
src/inference/: bench.rs  engine.rs  generate.rs  gguf.rs  kv_cache.rs  mod.rs  sampler.rs  state.rs  tensor.rs  test_model.rs  tokenizer.rs
src/inference/kernels/: avx2.rs  avx512.rs  dispatch.rs  mod.rs  scalar.rs
src/memory/: heap.rs  mod.rs  phys.rs
src/net/: mod.rs  tcp.rs
src/serving/: http.rs  mod.rs  openai_api.rs
src/shell/: mod.rs
tools/: create_test_gguf.py  download_model.sh  flash_usb.sh  mkimage.sh  write_firmware.sh
