[package]
name = "merlion-infer"
version = "0.1.0"
edition = "2021"
authors = ["MerlionOS Contributors"]
description = "A bare-metal OS purpose-built for LLM inference"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(avx2_available)'] }

[dependencies]
x86_64 = "0.14"
spin = "0.9"
pic8259 = "0.10"
linked_list_allocator = "0.10"
libm = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "merlion-infer"
path = "src/main.rs"
